# Minimax-subagent

./: .mcp.json  CLAUDE-CN.md  CLAUDE.md  Cargo.toml  Makefile  MiniMax_API_Reference.md  Minimax-mcp SKILL.md  README.md  Subagent-mcp SKILL.md  minimax-mcp SKILL.md
MiniMax-MCP/: README-CN.md  README.md
docs/: minimax同步语音合成.md  minimax图生视频.md  minimax异步语音合成.md  minimax文生视频.md  minimax音乐生成.md  minimax音色复刻.md  minimax首尾帧生成视频.md
docs/provider-Minimax/: minimax图片生成.md  minimax文件管理.md  minimax生成视频.md  minimax视频Agent任务.md  minimax音色管理.md  minimax音色设计.md
docs/superpowers/specs/: 2026-06-07-subagent-list-tools-design.md
openspec/changes/archive/2026-05-17-cli-text-to-audio-args-fix/: design.md  proposal.md  tasks.md
openspec/changes/archive/fix-list-voices-2013-error/: README.md
scripts/: bump.sh  sync_docs.sh
src/: client.rs  consts.rs  error.rs  lib.rs  main.rs  mcp_params.rs  subagent_impl.rs  types.rs  utils.rs  ws_client.rs
src/providers/: mod.rs
src/providers/minimax/: chat.rs  files.rs  image.rs  mod.rs  music.rs  search.rs  tts.rs  usage.rs  video.rs
src/subagent/: agent_tool.rs  dispatcher.rs  factory.rs  loop_runner.rs  mod.rs  registry.rs  tool_catalog.rs  types.rs
src/tools/: chat.rs  files.rs  image.rs  mod.rs  music.rs  search.rs  subagent.rs  tts.rs  usage.rs  video.rs
src/tools/chat/: mod.rs
src/tools/files/: mod.rs
src/tools/image/: mod.rs
src/tools/music/: mod.rs
src/tools/search/: mod.rs
src/tools/tts/: mod.rs
src/tools/usage/: mod.rs
src/tools/video/: mod.rs
subagents/: README.md  echo.json  orchestrator.json  voice-greeter.json  worker.json
