[package]
name = "Minimax-mcp"
version = "0.1.0"
edition = "2021"
description = "Rust MCP server and library for MiniMax API — video, speech, image, music generation"
license = "MIT"

[lib]
name = "minimax_api"
path = "src/lib.rs"

[[bin]]
name = "Minimax-mcp"
path = "src/main.rs"

[[bin]]
name = "minimax"
path = "src/bin/main_cli.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "fs", "sync"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
rmcp = { version = "1.6", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
hex = "0.4"
tar = "0.4"
